@@ -47,6 +47,10 @@ Release date: TBA
 
   Closes #5066
 
+* Fix false-positive ``useless-suppression`` for ``line-too-long``
+
+  Closes #4212
+
 
 What's New in Pylint 2.11.1?
 ============================
